# Mirroxd

./: .gitignore  README.md  index.html  package-lock.json  package.json
ai-backend/: main.py  requirements.txt
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: adb.rs  lib.rs  main.rs  recording.rs  scrcpy.rs
src/components/: AIHub.tsx  DeviceList.tsx  FloatingToolbar.tsx  MirrorCanvas.tsx  MirrorView.tsx  RecordingPanel.tsx  StreamSettings.tsx
src/components/ui/: GlassPanel.tsx  IconButton.tsx  StatusIndicator.tsx  Toast.tsx
src/hooks/: useAdb.ts  useScrcpy.ts
