[package]
name = "mirroxd"
version = "0.1.0"
description = "MirroXD - Android Screen Mirroring with AI"
authors = ["you"]
edition = "2021"

[lib]
name = "mirroxd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.5"
base64 = "0.22"
chrono = "0.4"
dirs = "5"
